--- a/birdland-frontend/src/app/index.scss
+++ b/birdland-frontend/src/app/index.scss
@@ -27,6 +27,8 @@ $icon-font-path: "../../bower_components/bootstrap-sass-official/assets/fonts/bo
   }
 }
 
+@import 'scss/home';
+
 /**
  *  Do not remove this comments bellow. It's the markers used by gulp-inject to inject
  *  all your sass files automatically
