--- a/birdland-frontend/src/app/main/main.html
+++ b/birdland-frontend/src/app/main/main.html
@@ -1,34 +1,67 @@
 <div class="container">
-
-  <div>
-    <acme-navbar creationDate="main.creationDate" />
-  </div>
-
-  <div class="jumbotron text-center">
-    <h1>'Allo, 'Allo!</h1>
-    <p class="lead">
-      <img src="assets/images/yeoman.png" alt="I'm Yeoman"><br>
-      Always a pleasure scaffolding your apps.
-    </p>
-    <p class="animated infinite" ng-class="main.classAnimation">
-      <button type="button" class="btn btn-lg btn-success" ng-click="main.showToastr()">Splendid Toastr</button>
-    </p>
-    <p>
-      With ♥ thanks to the contributions of<acme-malarkey extra-values="['Yeoman', 'Gulp', 'Angular']" />
-    </p>
-  </div>
-
   <div class="row">
-    <div class="col-sm-6 col-md-4" ng-repeat="awesomeThing in main.awesomeThings | orderBy:'rank'">
-      <div class="thumbnail">
-        <img class="pull-right" ng-src="assets/images/{{ awesomeThing.logo }}" alt="{{ awesomeThing.title }}">
-        <div class="caption">
-          <h3>{{ awesomeThing.title }}</h3>
-          <p>{{ awesomeThing.description }}</p>
-          <p><a ng-href="{{awesomeThing.url}}">{{ awesomeThing.url }}</a></p>
+    <div class="col-xs-12">
+      <!-- header/navigation -->
+      <header>
+        <h1>Birdland Birdwatching App</h1>
+        <nav>
+          <ul>
+            <li><a href="#" title="Login">Login</a></li>
+            <li><a href="#" title="Report">Report</a></li>
+          </ul>
+        </nav>
+      </header>
+      
+      <!-- map -->
+      <section class="mapbox">
+        <!-- map controls --> 
+        <div id="map" class="mapbox__map">
+              
+        </div> 
+        <div class="mapbox__controls">
+          
         </div>
-      </div>
-    </div>
-  </div>
 
+        <script type="text/javascript">
+
+          var map;
+          function initMap() {
+            map = new google.maps.Map(document.getElementById('map'), {
+              center: {lat: -34.397, lng: 150.644},
+              zoom: 8
+            });
+          }
+
+        </script>
+        <script async defer
+          src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCmP9_IcqdVZEvLo8cu4tQ42JUCo6V6-5Y&callback=initMap">
+        </script>
+      </section>
+      
+      <!-- report -->
+      <form action="" class="report">
+
+        <div class="form-group">
+          <label for="timestamp">Date</label>
+          <input type="text" class="report__input--timestamp form-control">
+        </div>
+        <div class="form-group">
+          <label for="location">Location</label>
+          <input type="text" class="report__input--location form-control">
+        </div>
+        <div class="form-group">
+          <label for="species">Species</label>
+          <input type="text" class="report__input--species form-control">
+        </div>
+        <div class="form-group">
+          <label for="notes">Notes</label>
+          <textarea rows="10" class="report__input--notes form-control">
+          </textarea>
+        </div>
+      </form>
+      
+      <!-- login/signup --></div>
+  </div>
+  
+  
 </div>
