--- a/birdland-frontend/src/app/main/main.html
+++ b/birdland-frontend/src/app/main/main.html
@@ -23,16 +23,67 @@
         </div>
 
         <script type="text/javascript">
+          // function get_location() {
+          //   navigator.geolocation.getCurrentPosition(show_map);
+          // }
 
-          var map;
+          // function show_map(position) {
+          //   var latitude = position.coords.latitude;
+          //   var longitude = position.coords.longitude;
+          //   // let's show a map or do something interesting!
+          //   console.log('latitude: ', latitude);
+          //   console.log('longitude: ', longitude);
+          // }
+
+          // var map;
+
+          // function initMap() {
+          //   map = new google.maps.Map(document.getElementById('map'), {
+          //     center: {lat: latitude, lng: longitude },
+          //     zoom: 8
+          //   });
+          // }
+
+          // $( document ).ready(function() {
+          //   get_location();   
+          // });
+
           function initMap() {
-            map = new google.maps.Map(document.getElementById('map'), {
+            var map = new google.maps.Map(document.getElementById('map'), {
               center: {lat: -34.397, lng: 150.644},
-              zoom: 8
+              zoom: 6
             });
+            var infoWindow = new google.maps.InfoWindow({map: map});
+
+            // Try HTML5 geolocation.
+            if (navigator.geolocation) {
+              navigator.geolocation.getCurrentPosition(function(position) {
+                var pos = {
+                  lat: position.coords.latitude,
+                  lng: position.coords.longitude
+                };
+
+                infoWindow.setPosition(pos);
+                infoWindow.setContent('Location found.');
+                map.setCenter(pos);
+              }, function() {
+                handleLocationError(true, infoWindow, map.getCenter());
+              });
+            } else {
+              // Browser doesn't support Geolocation
+              handleLocationError(false, infoWindow, map.getCenter());
+            }
           }
 
+          function handleLocationError(browserHasGeolocation, infoWindow, pos) {
+            infoWindow.setPosition(pos);
+            infoWindow.setContent(browserHasGeolocation ?
+                                  'Error: The Geolocation service failed.' :
+                                  'Error: Your browser doesn\'t support geolocation.');
+          }
+          
         </script>
+
         <script async defer
           src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCmP9_IcqdVZEvLo8cu4tQ42JUCo6V6-5Y&callback=initMap">
         </script>
