--- a/birdland-frontend/src/app/index.scss
+++ b/birdland-frontend/src/app/index.scss
@@ -27,7 +27,7 @@ $icon-font-path: "../../bower_components/bootstrap-sass-official/assets/fonts/bo
   }
 }
 
-@import 'scss/home';
+// @import 'scss/home';
 
 /**
  *  Do not remove this comments bellow. It's the markers used by gulp-inject to inject
