--- a/birdland-frontend/src/app/main/main.html
+++ b/birdland-frontend/src/app/main/main.html
@@ -1,83 +1,39 @@
-<div class="container">
-  <div class="row">
-    <div class="col-xs-12">
-      <!-- header/navigation -->
-      <header>
-        <h1>Birdland Birdwatching App</h1>
-        <nav>
-          <ul>
-            <li><a href="#" title="Login">Login</a></li>
-            <li><a href="#" title="Report">Report</a></li>
+<header class="header">
+  <div class="container">
+    <div class="row">
+      <div class="col-xs-12">
+        <h1 class="header__title">Birdland Birdwatching App</h1>
+        <!-- <nav class="header__nav nav">
+          <ul class="nav__list">
+            <li class="nav__item"><a class="nav__link" href="#" title="Login">Login</a></li>
+            <li class="nav__item"><a class="nav__link" href="#" title="Report">Report</a></li>
           </ul>
-        </nav>
-      </header>
+        </nav> -->
+      </div>
+    </div>
+  </div>
+</header>
+
+
+      <!-- header/navigation -->
+
       
-      <!-- map -->
-      <section class="mapbox">
-        <!-- map controls --> 
-        <div id="map" class="mapbox__map">
-              
-        </div> 
-        <div class="mapbox__controls">
-          
-        </div>
 
-        <script type="text/javascript">
-          
-          function initMap() {
-            var map = new google.maps.Map(document.getElementById('map'), {
-              center: {lat: -34.397, lng: 150.644},
-              zoom: 13
-            });
-            var infoWindow = new google.maps.InfoWindow({map: map});
+  <!-- map -->
+  <section class="mapbox">
+    <!-- map controls --> 
+    <div id="map" class="mapbox__map">
+    </div>
+  
+    <div class="mapbox__controls">
+      
+    </div>
+  
+  </section>
 
-            // Try HTML5 geolocation.
-            if (navigator.geolocation) {
-              navigator.geolocation.getCurrentPosition(function(position) {
-                var pos = {
-                  lat: position.coords.latitude,
-                  lng: position.coords.longitude
-                };
-
-                console.log('position: ', pos);
-
-                infoWindow.setPosition(pos);
-                infoWindow.setContent('Location found.');
-                map.setCenter(pos);
-              }, function() {
-                handleLocationError(true, infoWindow, map.getCenter());
-              });
-            } else {
-              // Browser doesn't support Geolocation
-              handleLocationError(false, infoWindow, map.getCenter());
-            }
-
-            var myLatLng = {lat: 30.270525, lng: -97.736249};
-
-            var marker = new google.maps.Marker({
-                position: myLatLng,
-                map: map,
-                title: 'Hello World!'
-              })
-          }
-
-          function handleLocationError(browserHasGeolocation, infoWindow, pos) {
-            infoWindow.setPosition(pos);
-            infoWindow.setContent(browserHasGeolocation ?
-                                  'Error: The Geolocation service failed.' :
-                                  'Error: Your browser doesn\'t support geolocation.');
-          }
-          
-
-        </script>
-
-        <script async defer
-          src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCmP9_IcqdVZEvLo8cu4tQ42JUCo6V6-5Y&callback=initMap">
-        </script>
-      </section>
       
       <!-- report -->
-      <form action="" class="report">
+      <!-- <form action="" class="report">
 
         <div class="form-group">
           <label for="timestamp">Date</label>
@@ -96,10 +52,6 @@
           <textarea rows="10" class="report__input--notes form-control">
           </textarea>
         </div>
-      </form>
+      </form> -->
       
-      <!-- login/signup --></div>
-  </div>
-  
-  
-</div>
+      <!-- login/signup -->
