--- a/birdland-frontend/src/app/scss/home.scss
+++ b/birdland-frontend/src/app/scss/home.scss
@@ -1,7 +1,19 @@
+.content {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    background-color: #f00;
+}
 .mapbox {
+    position: absolute;
+    top: $header-height;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    
     &__map {
         width: 100%;
-        height: 500px;
+        height: 100%;
         background-color: #ddd;
     }
 }
