add service to get birdData, and inject it into mainController

--- a/birdland-frontend/src/app/main/main.html
+++ b/birdland-frontend/src/app/main/main.html
@@ -31,7 +31,9 @@
   
   </section>
 
-      
+      <!-- placeholder images -->
+      <!-- http://p-hold.com/bird/100/200 -->
+
       <!-- report -->
       <!-- <form action="" class="report">
 
