modify debug preview styles

--- a/birdland-frontend/src/app/scss/home.scss
+++ b/birdland-frontend/src/app/scss/home.scss
@@ -15,3 +15,14 @@
         background-color: #ddd;
     }
 }
+
+.debug {
+    position: absolute;
+    top: 75px;
+    left: 0;
+    right: 0;
+    margin: 0 auto;
+    opacity: .8;
+    width: 80%;
+    padding: 25px 25px 30px;
+}
