--- a/birdland-frontend/src/app/main/main.html
+++ b/birdland-frontend/src/app/main/main.html
@@ -12,6 +12,8 @@
       </div>
     </div>
   </div>
+
+
 </header>
 
 
@@ -21,21 +23,14 @@
 
   <!-- map -->
   <section class="mapbox">
-  <pre>
-    {{main.test}}
-    Birds: {{main.birds}}
-    <!-- <p ng-model="main.birds">{{main.birds}}</p> -->
-    <!-- <p ng-repeat="bird in main.birds">
-      {{bird.bird_species}}
-    </p> -->
-  </pre>
+  
     <!-- map controls --> 
-    <map class="mapbox__map" center="current-location" zoom="13">
+    <map class="mapbox__map" center="current-location" zoom="10">
         <!-- <info-window position="current-location" visible="true">
           <span>Loation found using HTML5.</span>
         </info-window> -->
         <marker position="30.270525,-97.736249" title="Hello World!"></marker>
-        <marker position="{{main.test}}" title="Hello World!"></marker>
+        <marker ng-repeat="bird in main.birds" position="{{bird.lat}}, {{bird.long}}" title="Hello World!"></marker>
     </map>
     <!-- <div id="map" class="mapbox__map">
     </div> -->
@@ -72,7 +67,14 @@
       </form> -->
       
       <!-- login/signup -->
-
+      <pre class="debug">
+        {{main.test}}
+        <p ng-repeat="bird in main.birds">{{bird.bird_species}}</p>
+        <!-- <p ng-model="main.birds">{{main.birds}}</p> -->
+        <!-- <p ng-repeat="bird in main.birds">
+          {{bird.bird_species}}
+        </p> -->
+      </pre>
       
 
 <script type="text/javascript">
