--- a/birdland-frontend/src/app/scss/home.scss
+++ b/birdland-frontend/src/app/scss/home.scss
@@ -26,3 +26,6 @@
     width: 80%;
     padding: 25px 25px 30px;
 }
+
+.angular-google-map { height: 100%; }
+.angular-google-map-container { height: 100%; }
