--- a/birdland-frontend/src/app/scss/home.scss
+++ b/birdland-frontend/src/app/scss/home.scss
@@ -16,13 +16,19 @@
     }
 }
 
+.report-details {
+    width:500px;
+    height:500px;
+}
+
 .debug {
+    display: none;
     position: absolute;
     top: 75px;
     left: 0;
     right: 0;
     margin: 0 auto;
-    opacity: .8;
+    opacity: .4;
     width: 80%;
     padding: 25px 25px 30px;
 }
