add placeholder image to bird-details

--- a/birdland-frontend/src/app/components/templates/bird-details.html
+++ b/birdland-frontend/src/app/components/templates/bird-details.html
@@ -1,4 +1,5 @@
 <div class="report">
+<img src="http://p-hold.com/birds/150/150" alt="" title="{{parameter.bird_species}}" class="report__img">
 <h2 class="report__title">Species: {{parameter.bird_species}}</h2>
 <p class="report__date">Date Sighted: {{parameter.datetime | date:'medium'}}</p>
 <p class="date-test">{{1288323623006 | date:'medium'}}</p>
