--- a/birdland-frontend/src/app/scss/home.scss
+++ b/birdland-frontend/src/app/scss/home.scss
@@ -21,6 +21,13 @@
     height:500px;
 }
 
+.report {
+    &__img {
+        width: 150px;
+        height: 150px;
+    }
+}
+
 .debug {
     display: none;
     position: absolute;
