save before merging

--- a/birdland-frontend/src/app/main/main.html
+++ b/birdland-frontend/src/app/main/main.html
@@ -65,7 +65,9 @@
     </div> -->
   
     <div class="mapbox__controls">
-      
+      <button class="report__save-btn">
+        Save report
+      </button>
     </div>
   
   </section>
